Updated Web Stuff
Yup

--- a/Web Thing/Vote Page/index.html
+++ b/Web Thing/Vote Page/index.html
@@ -3,7 +3,7 @@
     
 <head>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-<title>tomorrowVision</title>
+<title>WHAT NOWWW????</title>
 </head>
 
 <body>
