--- a/Web Thing/Vote Page/results.html
+++ b/Web Thing/Vote Page/results.html
@@ -3,7 +3,7 @@
     
 <head>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-<title>tomorrowVision</title>
+<title>WHAT NOW??</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 <div id='menu'>
         <div id='menu'>
     
-            <h1><a href="index.html">VOTE RESULTS</a>a></h1>
+            <h1>VOTE RESULTS</h1>
         <h2>CORPSE >> 1</h2>
         <h2>WEED >> 0</h2>
         <h2>GAME THING >> 5</h2>
